<resources>
    <string name="app_name">Work Off Your In-N-Out</string>
    <string name="choose_item_eaten">Choose item eaten:</string>
    <string name="_300">300</string>
    <string name="total_miles">%.1f</string>
    <string name="total_calories">Total calories: %d</string>

    <string-array name="sizes_array">
        <item>Hamburger</item>
        <item>Cheeseburger</item>
        <item>Double-Double</item>
        <item>French Fries</item>
        <item>Milkshake</item>
    </string-array>

    <string name="running">Running</string>
    <string name="bicycling">Bicycling</string>
    <string name="yoga">Yoga</string>

    <string name="total_minutes_running"><u>Total minutes to run: </u></string>
    <string name="total_minutes_bicycling"><u>Total minutes to bike: </u></string>
    <string name="total_minutes_yoga"><u>Total minutes to practice yoga: </u></string>

    <string name="settings">Settings</string>
    <string name="pref_title_theme">Dark theme</string>
    <string name="pref_description_theme">Turn on dark theme</string>
    <string name="calculate">Calculate</string>
    <string name="tip">Pro Tip!</string>
    <string name="tip_message">Get your burger protein-style: replacing the buns with lettuce takes away 150 calories!</string>
    <string name="ok">OK</string>
    <string name="innout_logo">In-N-Out Logo</string>
    <string name="error_message">This item cannot be made protein-style!</string>
    <string name="error">Error</string>
    <string name="protein_style">Protein Style?</string>

    <string name="check_location_prompt">Does your state have an In-N-Out?</string>
    <string name="check_location_button">Check my state!</string>

    <string name="innout_nearby">Congratulations! Your state has multiple In-N-Out locations!</string>
    <string name="no_innout_nearby">No In-N-Out near you. What about Shake Shack?</string>

</resources>