<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!--Displays In-N-Out Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="350dp"
        android:layout_height="250dp"
        android:src="@drawable/innout_logo"
        android:contentDescription="@string/innout_logo"
        android:layout_marginStart="30dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <!--Displays spinner for food items-->
    <Spinner
        android:id="@+id/spinner_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/item_eaten"/>

    <!--Text prompting user to choose an item-->
    <TextView
        android:id="@+id/item_eaten"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_item_eaten"
        android:textSize="22sp"
        android:labelFor="@id/spinner_size"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/logo"
        android:textStyle="bold"
        />

    <!--Label for protein style switch-->
    <TextView
        android:id="@+id/protein_style_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/protein_style"
        android:textSize="22sp"
        android:labelFor="@id/protein_style_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_size"
        android:textStyle="bold"
        />

    <!--Switch for protein-style burger-->
    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/protein_style_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        app:layout_constraintLeft_toRightOf="@id/protein_style_label"
        app:layout_constraintTop_toBottomOf="@id/spinner_size"
        />

    <!--Displays total calories for selected item-->
    <TextView
        android:id="@+id/total_calories_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_calories"
        android:layout_marginTop="15dp"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/protein_style_switch"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="15dp"
        android:textStyle="bold"/>

    <!--Displays total minutes of exercise needed-->
    <TextView
        android:id="@+id/total_exercise_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_minutes_running"
        android:layout_marginTop="22dp"
        android:textSize="22sp"
        app:layout_constraintTop_toBottomOf="@id/total_calories_text_view"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="15dp"
        android:textStyle="bold"/>

    <!--Displays calculate button-->
    <Button
        android:id="@+id/calc_button"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:textSize="20sp"
        android:text="@string/calculate"
        android:layout_marginTop="20dp"
        android:onClick="calculateClick"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/total_exercise_text_view" />


</androidx.constraintlayout.widget.ConstraintLayout>